# Llvm.NET

./: .gitignore  Build-All.ps1  Build-ArgVal.ps1  Build-DotNet.ps1  Build-Interop.ps1  Build-LibLlvm.ps1  Build-Llvm.ps1  Build-Source.ps1  Build-Xplat.ps1  CMake-Helpers.ps1  Invoke-InteropTests.ps1  Invoke-UnitTests.ps1  Move-LlvmBuild.ps1  NuGet.Config  Pack-NuGet.ps1  Packages.props  azure-pipelines.yml  buildutils.ps1  msr-quarc.Llvm.NET.snk
PsModules/CommonBuild/: CommonBuild.psm1
llvm/xplat/linux/: config.h
llvm/xplat/mac/: abi-breaking.h  config.h  llvm-config.h
llvm/xplat/mac/include/llvm/Config/: config.h
src/Argument.Validators/: Ubiquity.ArgValidators.csproj
src/Argument.Validators/Properties/: AssemblyInfo.cs
src/Interop/LibLLVM/: CMakeLists.txt  EXPORTS.g.DEF  IncludeEverything.cpp  LegacyPassManagerOpt.cpp  NewOptPassDriver.cpp  ValueBindings.cpp
src/Interop/LibLLVM/include/: InlinedExports.h  ValueCache.h
src/Interop/LlvmBindingsGenerator/: LlvmBindingsGenerator.csproj  bindingsConfig.yml
src/Interop/Ubiquity.NET.Llvm.Interop/: Library.cs  NativeMethods.cs  Ubiquity.NET.Llvm.Interop.csproj
src/Interop/Ubiquity.NET.Llvm.Interop/Properties/: AssemblyInfo.cs
src/Ubiquity.NET.Llvm/: IOperandCollection.cs  Ubiquity.NET.Llvm.csproj
src/Ubiquity.NET.Llvm.Tests/: TestObjectFile.cs
src/Ubiquity.NET.Llvm/Instructions/: FuncletPad.cs
src/Ubiquity.NET.Llvm/Properties/: AssemblyInfo.cs
